# spell-checker

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  testausdokumentti.md  toteutusdokumentti.md  vaatimusmaarittely.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: app.py  routes.py
src/data/: words.txt
src/services/: damerau_levenshtein.py  spell_checker.py  trie.py
src/static/css/: styles.css
src/templates/: index.html  layout.html  message.html  result.html  suggest.html
src/tests/: damerau_levenshtein_test.py  spell_checker_test.py  trie_test.py
