[tool.poetry]
name = "spell-checker"
version = "0.1.0"
description = ""
authors = ["Sonja Olkkonen <sonja.olkkonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pygtrie = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
