[tool.poetry]
name = "spell-checker"
version = "0.1.0"
description = ""
authors = ["Sonja Olkkonen <sonja.olkkonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
